# django_dans_waitlist

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  TODO.md  manage.py  mypy.ini  requirements-dev.txt  requirements.txt  runtests.py  setup.cfg
.github/workflows/: python-test.yml  python-types.yml  test-python.yml
django_dans_waitlist/: admin.py  api_response.py  api_response_handler.py  apps.py  models.py  permissions.py  regex.py  urls.py  views.py
django_dans_waitlist/migrations/: 0001_initial.py
django_dans_waitlist/serializers/: base.py  waitlist.py
django_dans_waitlist/templates/emails/: base.html  waitlist-email.html
django_dans_waitlist/templates/emails/widgets/: signature.html
django_dans_waitlist/test/: settings.py
django_dans_waitlist/test/model_tests/: base.py
django_dans_waitlist/test/model_tests/waitlist/: test_waitlist_entry.py
django_dans_waitlist/test/view_tests/: base.py
django_dans_waitlist/test/view_tests/waitlist_view_tests/: test_waitlist_entry_emails_view_set.py  test_waitlist_entry_view_set.py
django_dans_waitlist/test/waitlist_view_tests/: test_waitlist_entry_emails_view_set.py
django_dans_waitlist/views/: waitlist.py
docs/: apis.md  models.md  release.md
