[metadata]
name = django-dans-waitlist
version = 0.0.1
description = A Django app to different basic waitlists.
long_description = file: README.md
url = https://www.github.com/dan1229/django_dans_waitlist
author = Daniel Nazarian
author_email = dnaz@danielnazarian.com
license = BSD-3-Clause
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 3.1
    Framework :: Django :: 3.2
    Framework :: Django :: 4.0
    Framework :: Django :: 4.1
    Framework :: Django :: 4.2
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
python_requires = >=3.10
install_requires =
    Django >= 3.1
    djangorestframework >= 3.14.0
    django-dans-notification==1.1.16
